--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
+    "postinstall": "prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node": ">=18 <21"
   },
   "keywords": [
     "blockchain",
@@ -17,16 +21,29 @@
   "author": "BlockCertify Team",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^5.14.0",
+    "ajv": "^8.17.1",
+    "argon2": "^0.40.1",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-validator": "^7.3.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.11",
+    "pdf-lib": "^1.17.1",
+    "pdf-parse": "^1.1.1",
+    "qrcode": "^1.5.3",
+    "tweetnacl": "^1.0.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.21"
+    "nodemon": "^2.0.21",
+    "prisma": "^5.14.0"
+  },
+  "prisma": {
+    "schema": "prisma/schema.prisma"
   }
 }
