--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "postinstall": "prisma generate",
+    "seed": "prisma db seed",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
@@ -40,10 +41,14 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/node": "^22.7.3",
     "nodemon": "^2.0.21",
-    "prisma": "^5.14.0"
+    "prisma": "^5.14.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   },
   "prisma": {
-    "schema": "prisma/schema.prisma"
+    "schema": "prisma/schema.prisma",
+    "seed": "node prisma/seed.js"
   }
 }
