--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
     "qrcode": "^1.5.3",
+    "sib-api-v3-sdk": "^8.5.0",
     "tweetnacl": "^1.0.3",
     "uuid": "^9.0.0"
   },
